--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
 			<version>5.2.9.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>2.3.4.RELEASE</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
